--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile project(':library')
+
+//    compile project(':library')
+    compile 'com.jeroenmols.awesomelibrary:awesomelibrary:1.0.0'
 }
