--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,20 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0-alpha2'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+
+        maven {
+            credentials {
+                username USERNAME
+                password PASSWORD
+            }
+            url "https://api.bitbucket.org/1.0/repositories/jeroenmols/maven_repository/raw/releases"
+        }
     }
 }
 
